# mcp-client-cli

./: .gitignore  README.md  devbox.json  pyproject.toml
src/mcp_client_cli/: cli.py  config.py  const.py  memory.py  output.py  prompt_cache.py  storage.py  terminal_input.py  tool.py
