[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_client_cli"
version = "0.4.4"
description = "Command line interface for MCP client"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" },
    { name = "Tom Nguyen", email = "tom81094@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "langchain-core>=0.3.29",
    "prompt-toolkit>=3.0.48",
    "langchain-anthropic>=0.3.1",
    "langchain>=0.3.14",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.1",
    "langgraph>=0.2.61",
    "langchain-openai>=0.2.14",
    "langchain-google-genai>=2.0.8",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "rich>=13.9.4",
    "commentjson>=0.9.0",
    "jsonschema-pydantic>=0.6",
    "pywin32>=306; sys_platform == 'win32' or platform_system == 'Windows'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
clipboard = [
    "pngpaste; sys_platform == 'darwin'"
]

[project.urls]
Homepage = "https://github.com/monotykamary/mcp_client_cli"
Issues = "https://github.com/monotykamary/mcp_client_cli/issues"

[project.scripts]
llm = "mcp_client_cli.cli:main"
